removed husband and wife